--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^7.4.0"
 selenium = "^4.10.0"
 docker = "^6.1.3"
 requests = "^2.31.0"
+pytest-xdist = {extras = ["psutil"], version = "^3.3.1"}
 
 
 [build-system]
