--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,34 @@
 async-generator==1.10
 attrs==23.1.0
-certifi
-cffi==1.15.1d
+beautifulsoup4==4.12.2
+certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 colorama==0.4.6
 docker==6.1.3
 exceptiongroup==1.1.1
+execnet==1.9.0
 h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
+lxml==4.9.2
 outcome==1.2.0
 packaging==23.1
 pluggy==1.2.0
+psutil==5.9.5
 pycparser==2.21
 pysocks==1.7.1
+pytest-xdist[psutil]==3.3.1
 pytest==7.4.0
 pywin32==306
 requests==2.31.0
 selenium==4.10.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.4.1
 trio-websocket==0.10.3
 trio==0.22.0
 urllib3==2.0.3
 urllib3[socks]==2.0.3
 websocket-client==1.6.1
 wsproto==1.2.0
-pytest-xdist[psutil]==3.3.1
